--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#home" class="smoothScroll">home</a></li>
             <li><a href="#about" class="smoothScroll">about</a></li>
-            <li><a href="#service" class="smoothScroll">service</a></li>              
+            <li><a href="#service" class="smoothScroll">What I do</a></li>              
             <li><a href="#portfolio" class="smoothScroll">portfolio</a></li>
             <li><a href="#contact" class="smoothScroll">contact</a></li>
           </ul>
@@ -130,7 +130,7 @@
                 <p class="sub-p">
                   I am a web developer adept in all stages of web
                   development. Very knowledgeable in HTML,
-                  CSS, JAVA, Firebase, APIs, and React.
+                  CSS, SASS, SQL, JAVA, Firebase, APIs, and React.
                   Experience in UI, testing, creating apps, and
                   debugging processes for clients. Bringing forth
                   expertise in front end development,
@@ -194,7 +194,7 @@
                      <!-- icon -->
                      <i class="fa fa-camera fa-4x" aria-hidden="true"></i>
                      <!-- Name Of Service You Want Show For User -->
-                     <h4>HTML, CSS, MySQL, javascript, react, firebase, APIs</h4>
+                     <h4>HTML, CSS, MySQL, JavaScript, React, Firebase, APIs, Git, SASS </h4>
                      <img src="skills.PNG" width="400" 
                      height="225" alt="What I do!">
                      <!-- Text Paragraph For You Up To You String 
@@ -491,7 +491,7 @@
                            <div class="data-contact-text text-center">
                               <!-- Time Of Work For You -->   
                               <p>
-                                   Available
+                                   Available anytime
                               </p>
                            </div>
                         </div>
