--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                            And Description for about
                       -->
                 <p class="sub-p">
+                  After working in advertising for years, I decided to make the jump to tech. I have been interested in computers ever since I can remember - which would be when my family purchased a Dell 1995 Windows PC (good times). As a millenial, I grew up with computers and was fascinated by them, and what they could do. Since making the jump to a new career, I have learned more than I could have imagined.
                   I am a web developer adept in all stages of web
                   development. Very knowledgeable in HTML,
                   CSS, SASS, SQL, JAVA, Firebase, APIs, and React.
@@ -220,47 +221,40 @@
                     <!-- Work (1)-->
                     <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
                         <!-- Edit:src ="nameimage.jpg" -->
-                        <img class="img-responsive" src="https://media-exp1.licdn.com/dms/image/C4D03AQEC_iaW8lloNA/profile-displayphoto-shrink_200_200/0/1581527786490?e=1628121600&v=beta&t=bGtHqi7s6DI7NZuKkRBSzW6U_KDdqnArQ9C8wU_fXNY" alt="sample image">
+                        <img class="img-responsive" src="boatride.PNG" alt="sample image">
                         <div class="div-hover">
                            <!-- Edit:href ="nameimage.jpg" -->
-                           <a href="https://media-exp1.licdn.com/dms/image/C4D03AQEC_iaW8lloNA/profile-displayphoto-shrink_200_200/0/1581527786490?e=1628121600&v=beta&t=bGtHqi7s6DI7NZuKkRBSzW6U_KDdqnArQ9C8wU_fXNY" class="image-popup-vertical-fit">
-                               <i class="fa fa-search fa-lg" aria-hidden="true"></i>
-                           </a>
+                         
                             <!-- Link For Project EX: href="www.google.com" -->
-                           <a href="https://www.lyletilleycodes.com"><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
+                           <a href="https://github.com/LyeTilley/lyle-tilley-project1"><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
                         </div>
                         <!-- Name Of Project -->
-                        <span class="item-desc">Project 1!</span>
+                        <span class="item-desc">Multi-page responsive site</span>
                     </div>
                      <!-- Work (2)-->
                     <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
                         <!-- Edit:src ="nameimage.jpg" -->
-                        <img class="img-responsive" src="http://placehold.it/640x480" alt="sample image">
+                        <img class="img-responsive" src="fetchadog.PNG" alt="sample image">
                         <div class="div-hover"> 
                            <!-- Edit:href ="nameimage.jpg" -->
-                           <a href="http://placehold.it/640x480" class="image-popup-vertical-fit">
-                               <i class="fa fa-search fa-lg" aria-hidden="true"></i>
-                           </a> 
+                          
                             <!-- Link For Project EX: href="www.google.com" -->
-                           <a href="#" ><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
+                           <a href="https://github.com/shaunAndLyleProjectTwo/projectTwo" ><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
                         </div>
                         <!-- Name Of Project -->
-                        <span class="item-desc">Project Title</span>
+                        <span class="item-desc">A cool dog API app!</span>
                     </div>
                      <!-- Work (3)-->
                     <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
                         <!-- Edit:src ="nameimage.jpg" -->
-                        <img class="img-responsive" src="http://placehold.it/640x480" alt="sample image">
+                        <img class="img-responsive" src="movie.PNG" alt="sample image">
                         <div class="div-hover">
                            <!-- Edit:href ="nameimage.jpg" -->
-                           <a href="http://placehold.it/640x480" class="image-popup-vertical-fit">
-                               <i class="fa fa-search fa-lg" aria-hidden="true"></i>
-                            </a>
-                            <!-- Link For Project EX: href="www.google.com" -->
-                           <a href="#" ><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
+                             <!-- Link For Project EX: href="www.google.com" -->
+                           <a href="https://github.com/AshwinLyleGaryProject4/project4" ><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
                         </div>
                         <!-- Name Of Project -->
-                        <span class="item-desc">Project Title</span>
+                        <span class="item-desc">React Movie app</span>
                     </div>
                      <!-- Work (4)-->
                     <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
@@ -268,7 +262,7 @@
                         <img class="img-responsive" src="http://placehold.it/640x480" alt="sample image">
                         <div class="div-hover"> 
                             <!-- Edit:href ="nameimage.jpg" -->
-                           <a href="http://placehold.it/640x480" class="image-popup-vertical-fit">
+                           <a href="movie.PNG" class="image-popup-vertical-fit">
                                <i class="fa fa-search fa-lg" aria-hidden="true"></i>
                            </a> 
                            <!-- Link For Project EX: href="www.google.com" -->
