--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       
     <!-- particles.js container -->
     <!-- Edit Image Homepage (ex: background-image: url(images/imagename.jpg);) -->  
-    <div id="particles-js" style="background-image: url('https://wallpaperaccess.com/full/1873770.jpg');" width="auto" height="auto"></div>
+    <div id="particles-js" style="background-image: url('https://w.wallpaperkiss.com/wimg/s/168-1680814_small.jpg');" width="auto" height="auto"></div>
       
     <!-- Start navbar -->
     <nav class="navbar navbar-default navbar-fixed-top" id="nav">
