--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       
     <!-- particles.js container -->
     <!-- Edit Image Homepage (ex: background-image: url(images/imagename.jpg);) -->  
-    <div id="particles-js" style="background-image: url('https://w.wallpaperkiss.com/wimg/s/168-1680814_small.jpg');" width="auto" height="auto"></div>
+    <div id="particles-js" style="background-image: url('https://www.traveltoexplore.com/package/3shutterstock_219663835-2.jpg');" width="400" height="600"></div>
       
     <!-- Start navbar -->
     <nav class="navbar navbar-default navbar-fixed-top" id="nav">
@@ -196,8 +196,8 @@
                      <i class="fa fa-camera fa-4x" aria-hidden="true"></i>
                      <!-- Name Of Service You Want Show For User -->
                      <h4>HTML, CSS, MySQL, JavaScript, React, Firebase, APIs, Git, SASS </h4>
-                     <img src="skills.PNG" width="400" 
-                     height="225" alt="What I do!">
+                     <img src="skills.PNG" width="320" 
+                     height="210" alt="What I do!">
                      <!-- Text Paragraph For You Up To You String 
                            And Description for Service 
                       -->
