--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       
     <!-- particles.js container -->
     <!-- Edit Image Homepage (ex: background-image: url(images/imagename.jpg);) -->  
-    <div id="particles-js" style="background-image: url('https://www.traveltoexplore.com/package/3shutterstock_219663835-2.jpg');" width="400" height="600"></div>
+    <div id="particles-js" style="background-image: url('https://wallpapercave.com/wp/wp2553949.jpg');" width="400" height="600"></div>
       
     <!-- Start navbar -->
     <nav class="navbar navbar-default navbar-fixed-top" id="nav">
