--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                            <!-- Edit:href ="nameimage.jpg" -->    
                           
                             <!-- Link For Project EX: href="www.google.com" -->
-                           <a href="file:///C:/Users/tille/OneDrive/Desktop/LYLEFINALRESUME2021.pdf" ><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
+                           <a href="https://drive.google.com/file/d/1T3pqorJSfCQWBkivshqqCHBonjILGl31/view?usp=sharing" ><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
                         </div>
                         <!-- Name Of Project -->
                         <span class="item-desc">Resume</span>
