--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta name="description" content="">
     <meta name="author" content=""> 
-    <title>Welcome to Lyle's Page</title><
+    <title>Welcome to Lyle's Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
