--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
                      <!-- icon -->
                      <i class="fa fa-camera fa-4x" aria-hidden="true"></i>
                   
-                     <h4>HTML, CSS, MySQL, JavaScript, React, Firebase, APIs, Git, SASS <br></h4>
+                     <h4 style="color:rgb(5, 5, 5);font-size:40px;"><strong>HTML, CSS, MySQL, JavaScript, React, Firebase, APIs, Git, SASS </strong><br></h4>
                      <img src="skills.PNG" width="320" 
                      height="210" alt="What I do!">
                   
-                     <p class="sub-text"><br>What I truly specialize in. Website creation with any and all of these software web development programs.</p>
+                     <p class="sub-text" style="color:rgb(5, 5, 5);font-size:20px;"><br><strong>I truly specialize in. Website creation with any and all of these software web development programs.</strong> </p>
                   </div>
               </div>
           </div>   
