--- a/index.html
+++ b/index.html
@@ -184,7 +184,17 @@
                      <h4>UI/UX DESIGN</h4>
                      <br>
                    
-                     <p class="sub-text">Gather and evaluate user requirements in collaboration with product managers and engineers //
+                     <p class="sub-text">
+                      Creating numerous websites with Shopify’s Liquid templating language, PHP, WordPress and WooCommerce (all can be requested), Elementor, Crocoblocks
+                      - Developing new framework designs for clients
+                      - Assisted in managing general development work
+                      - Staging for current and to-be-made websites for clients
+                      - Work hands on with clients and their needs for their websites
+                      - SCRUM / Agile method used daily
+                      - VSCode used with several websites created
+                      - GitHub used daily <br> 
+                      <br> 
+                      Gather and evaluate user requirements in collaboration with product managers and engineers //
                       Illustrate design ideas using storyboards, process flows and sitemaps //
                       Design graphic user interface elements, like menus, tabs and widgets //
                       Build page navigation buttons and search fields //
