--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     - React 
                     - HTML - CSS 
                     - MySQL 
+                    - Adobe XD
                     - Firebase, APIs 
                     - Agile (SCRUM, XP)
                     - Google Adwords, Google DFP 
