--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                       - HTML - CSS 
                       - MySQL 
                       - Firebase, APIs 
+                      - Adobe XD
                       - Agile (SCRUM, XP)
                       - Google Adwords, Google DFP 
                       - Data mining 
