--- a/index.html
+++ b/index.html
@@ -240,10 +240,7 @@
                       - Mailchimp
                       - Elementor
                       - Crocoblocks
-                       </strong><br></h5>
-                  
-                  </div>
-              </div>
+                       </strong></h5>
           </div>   
     </section>  
     <!-- End Service -->
