--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           What do I do?
           </strong></h2>
 
-          <img src="codewrite.gif" alt="">
+          <img src="codewrite.gif" class="codeWrite" alt="">
 
           <br>
           <Br>
