--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Start Loading -->
     
 
-    <div id="particles-js" style="background-image: url('https://www.novascotia.com/sites/default/files/2019-05/Peggys%20Cove-sunrise-1920x1080.jpg');" width="400" height="600"></div>
+    <div id="particles-js" style="background-image: url('https://wallpapercave.com/wp/wp7086584.jpg');" width="400" height="600"></div>
       
     <!-- Start navbar -->
     <nav class="navbar navbar-default navbar-fixed-top" id="nav">
