--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                          
                            <a href="https://thirsty-heisenberg-bde734.netlify.app/" ><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
                         </div>
-                        <span class="item-desc">Restfull API app!</span>
+                        <span class="item-desc">Restful API app!</span>
 
                       </div><div>
                         <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
