--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Start Loading -->
     
 
-    <div id="particles-js" style="background-image: url('thewallpaper.jpg');" width="400" height="600"></div>
+    <div id="particles-js" style="background-image: url('thewallpaper.jpg');" width="300" height="600"></div>
       
     <!-- Start navbar -->
     <nav class="navbar navbar-default navbar-fixed-top" id="nav">
@@ -92,7 +92,7 @@
                      <h1>
                          I'm Lyle Tilley.
                      </h1>
-                     <h2>Web Designer / Developer</h2>  
+                     <h2>Web Developer.</h2>  
                  </div>
                     <a class="angle-down smoothScroll" href="#about">
                       <i class="fa fa-angle-down" aria-hidden="true"></i>
