--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                      <strong>Contact</strong>
             </h2>
             <div id="container">
-              <h1>&bull; Keep in Touch &bull;</h1>
+              <h1>&bull; Keep In Touch &bull;</h1>
               <div class="underline">
               </div>
               <div class="icon_wrapper">
@@ -452,7 +452,7 @@
                   <path d="M70.865,101.78c0,4.774,3.886,8.657,8.66,8.657c4.774,0,8.657-3.883,8.657-8.657c0-4.773-3.883-8.656-8.657-8.656    C74.751,93.124,70.865,97.006,70.865,101.78z"></path>
                 </svg>
               </div>
-              <form action="#" method="post" id="contact_form">
+              <form action="mailto:tilley_l@hotmail.com" method="post" id="contact_form">
                 <div class="name">
                   <label for="name"></label>
                   <input type="text" placeholder="My name is" name="name" id="name_input" required>
