--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         <span class="item-desc">Restful API app!</span>
 
                       </div><div>
-                        <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
+                        <!-- <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
                        
                           <img class="img-responsive" src="vandalboy.PNG" alt="sample image">
                           <div class="div-hover">
@@ -350,7 +350,7 @@
                           </div>
                          
                           <span class="item-desc">VNDL project</span>
-                      </div>
+                      </div> -->
 
                     </div>
                 </div>
@@ -452,7 +452,7 @@
                   <path d="M70.865,101.78c0,4.774,3.886,8.657,8.66,8.657c4.774,0,8.657-3.883,8.657-8.657c0-4.773-3.883-8.656-8.657-8.656    C74.751,93.124,70.865,97.006,70.865,101.78z"></path>
                 </svg>
               </div>
-              <form action="mailto:tilley_l@hotmail.com" method="post" id="contact_form">
+              <form action="https://lyletilleycodes.com/" method="post" id="contact_form">
                 <div class="name">
                   <label for="name"></label>
                   <input type="text" placeholder="My name is" name="name" id="name_input" required>
