--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <p class="sub-p">
                   
 
-                  After working in advertising for years, I decided to make the jump to tech. With advertising, I loved working with clients content, and seeing results. I wanted to be more hands on, though - design and create. So I pursued web develpment. It's challenging, creative, and best of all - I am able to make a difference and SEE the difference on live websites - in turn seeing performance go up - this is what I strive for.
+                  After working in advertising for years, I decided to make the jump to tech. With advertising, I loved working with clients content, and seeing results. I wanted to be more hands on, though - design and create. So I pursued web development. It's challenging, creative, and best of all - I am able to make a difference and SEE the difference on live websites - in turn seeing performance go up - this is what I strive for.
                   <br>
                   I have a Business Degree in marketing and finance, which gives a nice touch to relationship management and marketing strategies when creating and designing websites! I have a JAVAScript course from ECornell, a HTML/CSS course from Juno, and a Coding BOOTCAMP from Juno College under my belt to help me code.
                   <br>
