--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                      <strong>Contact</strong>
             </h2>
             <div id="container">
-              <h1> KEEP IN TOUCH </h1>
+              <h1> KEEP IN TOUCH! </h1>
              
               <div class="icon_wrapper">
           
