--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta name="description" content="">
     <meta name="author" content=""> 
-    <title>Welcome to Lyle's Page</title>
+    <title>Lyle Tilley | Web Developer</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -82,7 +82,7 @@
     <section id="home" class="home-page">
           <div class="container">
                 <div class="row">
-                   <div class="sub-container col-md-12 col-sm-12 col-xs-12 text-center">
+                  <div class="sub-container col-md-12 col-sm-12 col-xs-12 text-center">
                      <h4>hello</h4>
                        <br>
                        <br>
