--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
            
                 <p class="sub-text">
                   I'm Lyle! </br> 
-                </br>Gym guy. Identical twin. Wannabe Eliott Alderson from Mr Robot. (great show!) Boston Terrier owner.
+                </br>Gym guy. Identical twin. Wannabe Eliott Alderson from Mr Robot.
                 </p>
 
                 <br>
