--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                          
                            <a href="https://thirsty-heisenberg-bde734.netlify.app/" ><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
                         </div>
-                        <span class="item-desc">Restful API app!</span>
+                        <span class="item-desc">Restful API app! (Firebase)</span>
 
 
 
