--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <!-- Filter Controls - Simple Mode -->
             <div class="row">
                 <!-- Header Work Page -->
-                <h2 class="text-center"><strong>work</strong></h2>
+                <h2 class="text-center"><strong>work / played a part in creating</strong></h2>
              <p></p>
                 <div class="filtr-container">
                     <!-- <!-- Work (1)
