--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
               <div class="icon_wrapper">
           
               </div>
-              <form action="mailto:tilley_l@hotmail.com/" method="post" id="contact_form">
+              <form action="https://formspree.io/f/mvolkwlg" method="POST" id="contact_form">
                 <div class="name">
                   <label for="name"></label>
                   <input type="text" placeholder="My name is" name="name" id="name_input" required>
