--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                   <i class="fa fa-brands fa-github"></i >   Git Hub
                                   <i class="fa fa-brands fa-mailchimp"></i>   Mailchimp
                                <i class="fa fa-brands fa-elementor"></i>   Elementor
-                               <i class="fa fa-solid fa-bug-slash"></i>   DeBugging!
+                               <i class="fa fa-solid fa-code"></i>   DeBugging!
                                   </strong></h5>
                    <br><br>
                    <br>
