--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <div class="col-md-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-delay=".3s"> 
                            
                                 <!-- icon -->
-                                <i class="fa fa-solid fa-code fa-4x" aria-hidden="true"></i>
+                                <i class="fa fa-keyboard fa-4x" aria-hidden="true"></i>
                              
                                 <h5 style="color:rgb(5, 5, 5);font-size:25px;"><strong>
                                   <h4> <uppercase>THE GOOD STUFF</h4></uppercase><br>
