--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Cavani | Home</title>
+<title>Lyle Tilley | Web Developer</title>
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
@@ -120,7 +120,7 @@
 		<!-- MAINPART -->
 		<div class="cavani_tm_mainpart">
 			<div class="author_image">
-				<div class="main" data-img-url="img/about/4.jpg"></div>
+				<div class="main" data-img-url="img/lyleprofes.jpg"></div>
 				<div class="particle_wrapper">
 					<div id="particles-js"></div>
 				</div>
@@ -161,12 +161,12 @@
 								</div>
 								<div class="wrapper">
 									<div class="left">
-										<p>Hello there! My name is <strong>Rosa Vincent.</strong> I am a graphic designer, and I'm very passionate and dedicated to my work.</p>
+										<p>Hello there! My name is <strong>Lyle Tilley</strong> I am a graphic designer, and I'm very passionate and dedicated to my work.</p>
 										<p>With 20 years experience as a professional a graphic designer, I have acquired the skills and knowledge necessary to make your project a success.</p>
 									</div>
 									<div class="right">
 										<ul>
-											<li><span class="first">Name:</span><span class="second">Rosa Vincent</span></li>
+											<li><span class="first">Name:</span><span class="second">Lyle</span></li>
 											<li><span class="first">Address:</span><span class="second">Ave Street, New York, USA</span></li>
 											<li><span class="first">Study:</span><span class="second">Univercity of Oxford</span></li>
 											<li><span class="first">Degree:</span><span class="second">Master of Science</span></li>
@@ -924,7 +924,7 @@
 		<!-- FOOTER -->
 		<div class="cavani_tm_footer">
 			<div class="copyright">
-				<p>Copyright &copy; 2021</p>
+				<p>Copyright &copy; 2022 - Lyle Tilley</p>
 			</div>
 			<div class="social">
 				<ul>
