--- a/html/index.html
+++ b/html/index.html
@@ -88,7 +88,7 @@
 			<div class="inner">
 				<div class="wrapper">
 					<div class="avatar">
-						<div class="image" data-img-url="img/about/4.jpg"></div>
+						<div class="image" data-img-url="img/about/lyle.jpg"></div>
 					</div>
 					<div class="menu_list">
 						<ul class="transition_link">
@@ -237,21 +237,10 @@
 											<ul>
 												<li>
 													<div class="list_inner">
-														<div class="myCircle" data-value="0.95"></div>
+														<div class="myCircle" data-value="1.00"></div>
 														<div class="title"><span>English</span></div>
 													</div>
-												</li>
-												<li>
-													<div class="list_inner">
-														<div class="myCircle" data-value="0.8"></div>
-														<div class="title"><span>Russian</span></div>
-													</div>
-												</li>
-												<li>
-													<div class="list_inner">
-														<div class="myCircle" data-value="0.9"></div>
-														<div class="title"><span>Arabic</span></div>
-													</div>
+												
 												</li>
 											</ul>
 										</div>
