--- a/html/index.html
+++ b/html/index.html
@@ -103,9 +103,9 @@
 						<ul>
 							<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
 							<li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
-							<li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
+							<!-- <li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
 							<li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt="" /></a></li>
-							<li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg" alt="" /></a></li>
+							<li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg" alt="" /></a></li> -->
 						</ul>
 					</div>
 					<div class="copyright">
@@ -493,17 +493,17 @@
 							<br>
 							<div class="portfolio_list">
 								<ul class="gallery_zoom">
-									<li class="youtube">
+									<li class="shopify">
 										<div class="list_inner">
 											<div class="image">
 												<img src="img/thumbs/1-1.jpg" alt="" />
-												<div class="main" data-img-url="img/portfolio/1.jpg"></div>
+												<div class="main" data-img-url="img/portfolio/petitewine.png"></div>
 												<span class="icon"><i class="icon-youtube-play"></i></span>
 												<div class="details">
-													<h3>Ave Brook</h3>
-													<span>Youtube</span>
+													<h3>Petite Rivière Vineyards</h3>
+													<span>Shopify</span>
 												</div>
-												<a class="cavani_tm_full_link popup-youtube" href="https://www.youtube.com/watch?v=7e90gBu4pas"></a>
+												<a class="cavani_tm_full_link popup-youtube" href="https://petiterivierevineyards.ca/"></a>
 											</div>
 										</div>
 									</li>
@@ -511,13 +511,13 @@
 										<div class="list_inner">
 											<div class="image">
 												<img src="img/thumbs/1-1.jpg" alt="" />
-												<div class="main" data-img-url="img/portfolio/2.jpg"></div>
+												<div class="main" data-img-url="img/portfolio/thefacebookfinal.png"></div>
 												<span class="icon"><i class="icon-vimeo-1"></i></span>
 												<div class="details">
-													<h3>Kelly Hookin</h3>
-													<span>Vimeo</span>
+													<h3>Lead Gen. Landing Page</h3>
+													<span>JAVAScript</span>
 												</div>
-												<a class="cavani_tm_full_link popup-vimeo" href="https://vimeo.com/337293658"></a>
+												<a class="cavani_tm_full_link popup-vimeo" href="https://retirementinfo.netlify.app/"></a>
 											</div>
 										</div>
 									</li>
