--- a/html/index.html
+++ b/html/index.html
@@ -135,7 +135,7 @@
 							<span class="line"></span>
 							<h3 class="job">
 								<span class="cd-headline loading-bar"> <!-- ANIMATE TEXT VALUES: zoom, rotate-1, letters type, letters rotate-2, loading-bar, slide, clip, letters rotate-3, letters scale, push,  -->
-									<span class="blc">Creative</span>
+									<span class="blc">Web</span>
 									<span class="cd-words-wrapper">
 									  <b class="is-visible">Developer</b>
 									
