--- a/html/index.html
+++ b/html/index.html
@@ -101,8 +101,8 @@
 					</div>
 					<div class="social">
 						<ul>
-							<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
-							<li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
+							<li><a href="https://www.linkedin.com/in/lyle-tilley-5b68b5178/"><img class="svg" src="img/svg/social/linkedin.png" alt="" /></a></li>
+					<li><a href="https://github.com/LyeTilley"><img class="svg" src="img/svg/social/github.png" alt="" /></a></li>
 							<!-- <li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
 							<li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt="" /></a></li>
 							<li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg" alt="" /></a></li> -->
@@ -525,13 +525,13 @@
 										<div class="list_inner">
 											<div class="image">
 												<img src="img/thumbs/1-1.jpg" alt="" />
-												<div class="main" data-img-url="img/portfolio/3.jpg"></div>
+												<div class="main" data-img-url="img/portfolio/capegall.png"></div>
 												<span class="icon"><i class="icon-soundcloud-1"></i></span>
 												<div class="details">
-													<h3>Ashley Flores</h3>
-													<span>Soundcloud</span>
+													<h3>Cape Breton Gallery</h3>
+													<span>Wordpress</span>
 												</div>
-												<a class="cavani_tm_full_link soundcloude_link mfp-iframe audio" href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/471954807&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></a>
+												<a class="cavani_tm_full_link soundcloude_link mfp-iframe audio" href="https://capebretongallery.com/"></a>
 											</div>
 										</div>
 									</li>
@@ -930,8 +930,9 @@
 			</div>
 			<div class="social">
 				<ul>
-					<li><a href="#"><img class="svg" src="img/svg/social/github.svg" alt="" /></a></li>
-					<li><a href="#"><i class="fa fa-brands fa-linkedin"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/lyle-tilley-5b68b5178/"><img class="svg" src="img/svg/social/linkedin.png" alt="" /></a></li>
+					<li><a href="https://github.com/LyeTilley"><img class="svg" src="img/svg/social/github.png" alt="" /></a></li>
+					<!-- <li><a href="#"><i class="fa fa-brands fa-linkedin"></i></a></li> -->
 					<!-- <li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
 					<li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt="" /></a></li>
 					<li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg" alt="" /></a></li> -->
