--- a/html/index.html
+++ b/html/index.html
@@ -908,10 +908,10 @@
 										</form>
 									</div>
 								</div>
-								<div class="right">
+								<!-- <div class="right">
 									<div class="map_wrap">
 										<div class="map" id="ieatmaps"></div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
