--- a/html/index.html
+++ b/html/index.html
@@ -496,9 +496,9 @@
 									<li class="shopify">
 										<div class="list_inner">
 											<div class="image">
-												<img src="img/thumbs/1-1.jpg" alt="" />
+												<img src="img/thumbs/shopify.png" alt="" />
 												<div class="main" data-img-url="img/portfolio/petitewine.png"></div>
-												<span class="icon"><i class="icon-youtube-play"></i></span>
+												<span class="icon"><i class="fa-brands fa-shopify"></i></span>
 												<div class="details">
 													<h3>Petite Rivière Vineyards</h3>
 													<span>Shopify</span>
@@ -512,12 +512,12 @@
 											<div class="image">
 												<img src="img/thumbs/1-1.jpg" alt="" />
 												<div class="main" data-img-url="img/portfolio/thefacebookfinal.png"></div>
-												<span class="icon"><i class="icon-vimeo-1"></i></span>
+												<span class="icon"><i class="fa-solid fa-link"></i></span>
 												<div class="details">
 													<h3>Lead Gen. Landing Page</h3>
 													<span>JAVAScript</span>
 												</div>
-												<a class="cavani_tm_full_link popup-vimeo" href="https://retirementinfo.netlify.app/"></a>
+												<a class="cavani_tm_full_link popup-link" href="https://retirementinfo.netlify.app/"></a>
 											</div>
 										</div>
 									</li>
@@ -526,7 +526,7 @@
 											<div class="image">
 												<img src="img/thumbs/1-1.jpg" alt="" />
 												<div class="main" data-img-url="img/portfolio/capegall.png"></div>
-												<span class="icon"><i class="icon-soundcloud-1"></i></span>
+												<span class="icon"><i class=""></i></span>
 												<div class="details">
 													<h3>Cape Breton Gallery</h3>
 													<span>Wordpress</span>
@@ -539,13 +539,13 @@
 										<div class="list_inner">
 											<div class="image">
 												<img src="img/thumbs/1-1.jpg" alt="" />
-												<div class="main" data-img-url="img/portfolio/4.jpg"></div>
-												<span class="icon"><i class="icon-resize-full-alt"></i></span>
+												<div class="main" data-img-url="img/portfolio/breakingbad.png"></div>
+												<span class="icon"><i class=""></i></span>
 												<div class="details">
-													<h3>Alla Gorova</h3>
-													<span>Image</span>
+													<h3>Breaking Bad React App</h3>
+													<span>React</span>
 												</div>
-												<a class="cavani_tm_full_link zoom" href="img/portfolio/4.jpg"></a>
+												<a class="cavani_tm_full_link zoom" href="https://cocky-wilson-57f220.netlify.app/?fbclid=IwAR3oTWRtlhlouRHVbIJW5mcaOejO3ADyskJ25GH7OLVX-rJ2X1JoXY4itb8" target="_blank"></a>
 											</div>
 										</div>
 									</li>
@@ -553,13 +553,13 @@
 										<div class="list_inner">
 											<div class="image">
 												<img src="img/thumbs/1-1.jpg" alt="" />
-												<div class="main" data-img-url="img/portfolio/5.jpg"></div>
-												<span class="icon"><i class="icon-resize-full-alt"></i></span>
+												<div class="main" data-img-url="img/portfolio/tipping11.png"></div>
+												<span class="icon"><i class=""></i></span>
 												<div class="details">
-													<h3>Fele Sweet</h3>
-													<span>Image</span>
+													<h3>Tipping Point Distillery</h3>
+													<span>Shopify</span>
 												</div>
-												<a class="cavani_tm_full_link zoom" href="img/portfolio/5.jpg"></a>
+												<a class="cavani_tm_full_link zoom" href="https://tippingpointdistillers.ca/"></a>
 											</div>
 										</div>
 									</li>
@@ -567,11 +567,11 @@
 										<div class="list_inner">
 											<div class="image">
 												<img src="img/thumbs/1-1.jpg" alt="" />
-												<div class="main" data-img-url="img/portfolio/6.jpg"></div>
-												<span class="icon"><i class="icon-doc-text-inv"></i></span>
+												<div class="main" data-img-url="img/portfolio/beverly.png"></div>
+												<span class="icon"><i class=""></i></span>
 												<div class="details">
-													<h3>Alice Moon</h3>
-													<span>Detail</span>
+													<h3>JAVAScript App</h3>
+													<span>Weather App</span>
 												</div>
 												<a class="cavani_tm_full_link portfolio_popup" href="#"></a>
 											</div>
