--- a/html/index.html
+++ b/html/index.html
@@ -507,6 +507,62 @@
 											</div>
 										</div>
 									</li>
+									<li class="shopify">
+										<div class="list_inner">
+											<div class="image">
+												<img src="img/thumbs/shopify.png" alt="" />
+												<div class="main" data-img-url="img/portfolio/thefacebookfinal.png"></div>
+												<span class="icon"><i class="fa-brands fa-shopify"></i></span>
+												<div class="details">
+													<h3>Lead Gen. Landing Page</h3>
+													<span>JAVAScript</span>
+												</div>
+												<a class="cavani_tm_full_link popup-youtube" href="https://retirementinfo.netlify.app/"></a>
+											</div>
+										</div>
+									</li>
+									<li class="shopify">
+										<div class="list_inner">
+											<div class="image">
+												<img src="img/thumbs/shopify.png" alt="" />
+												<div class="main" data-img-url="img/portfolio/tipping11.png"></div>
+												<span class="icon"><i class="fa-brands fa-shopify"></i></span>
+												<div class="details">
+													<h3>Tipping Point Distillery</h3>
+													<span>Shopify</span>
+												</div>
+												<a class="cavani_tm_full_link popup-youtube" href="https://tippingpointdistillers.ca/"></a>
+											</div>
+										</div>
+									</li>
+									<li class="shopify">
+										<div class="list_inner">
+											<div class="image">
+												<img src="img/thumbs/shopify.png" alt="" />
+												<div class="main" data-img-url="img/portfolio/2crowsboys.png"></div>
+												<span class="icon"><i class="fa-brands fa-shopify"></i></span>
+												<div class="details">
+													<h3>2Crows Brewing</h3>
+													<span>Wordpress</span>
+												</div>
+												<a class="cavani_tm_full_link popup-youtube" href="https://2crowsbrewing.com/"></a>
+											</div>
+										</div>
+									</li>
+									<li class="shopify">
+										<div class="list_inner">
+											<div class="image">
+												<img src="img/thumbs/shopify.png" alt="" />
+												<div class="main" data-img-url="img/portfolio/breakingbad.png"></div>
+												<span class="icon"><i class="fa-brands fa-shopify"></i></span>
+												<div class="details">
+													<h3>Breaking Bad React App</h3>
+													<span>React</span>
+												</div>
+												<a class="cavani_tm_full_link popup-youtube" href="https://cocky-wilson-57f220.netlify.app/?fbclid=IwAR3oTWRtlhlouRHVbIJW5mcaOejO3ADyskJ25GH7OLVX-rJ2X1JoXY4itb8"></a>
+											</div>
+										</div>
+									<!-- </li>
 									<li class="vimeo">
 										<div class="list_inner">
 											<div class="image">
@@ -562,7 +618,54 @@
 												<a class="cavani_tm_full_link zoom" href="https://tippingpointdistillers.ca/"></a>
 											</div>
 										</div>
+									</li> -->
+									<li class="shopify">
+										<div class="list_inner">
+											<div class="image">
+												<img src="img/thumbs/shopify.png" alt="" />
+												<div class="main" data-img-url="img/portfolio/pizzaman.png"></div>
+												<span class="icon"><i class="fa-brands fa-shopify"></i></span>
+												<div class="details">
+													<h3>Halifax pizza slector (JAVAScript)</h3>
+													<span>JAVAScript</span>
+												</div>
+												<a class="cavani_tm_full_link popup-youtube" href="https://romantic-raman-a19a8a.netlify.app/"></a>
+											</div>
+										</div>
 									</li>
+
+
+									<li class="shopify">
+										<div class="list_inner">
+											<div class="image">
+												<img src="img/thumbs/shopify.png" alt="" />
+												<div class="main" data-img-url="img/portfolio/thegiffinder.png"></div>
+												<span class="icon"><i class="fa-brands fa-shopify"></i></span>
+												<div class="details">
+													<h3>REST API GIF Selector</h3>
+													<span>JAVAScript/HTML/CSS/ API</span>
+												</div>
+												<a class="cavani_tm_full_link popup-youtube" href="https://suspicious-shannon-071a9f.netlify.app/"></a>
+											</div>
+										</div>
+									</li>
+
+
+									<li class="shopify">
+										<div class="list_inner">
+											<div class="image">
+												<img src="img/thumbs/shopify.png" alt="" />
+												<div class="main" data-img-url="img/portfolio/2crowsboys.png"></div>
+												<span class="icon"><i class="fa-brands fa-shopify"></i></span>
+												<div class="details">
+													<h3>Chill Street Brewing - Arbuckle Media© client (all Shopify/Wordpress are AM clients)</h3>
+													<span>Shopify</span>
+												</div>
+												<a class="cavani_tm_full_link popup-youtube" href="https://chillstreetcraftbeverageco.com/"></a>
+											</div>
+										</div>
+									</li>
+
 									<li class="detail">
 										<div class="list_inner">
 											<div class="image">
