--- a/html/index.html
+++ b/html/index.html
@@ -655,7 +655,7 @@
 										<div class="list_inner">
 											<div class="image">
 												<img src="img/thumbs/shopify.png" alt="" />
-												<div class="main" data-img-url="img/portfolio/2crowsboys.png"></div>
+												<div class="main" data-img-url="img/portfolio/street.png"></div>
 												<span class="icon"><i class="fa-brands fa-shopify"></i></span>
 												<div class="details">
 													<h3>Chill Street Brewing - Arbuckle Media© client (all Shopify/Wordpress are AM clients)</h3>
