--- a/html/index.html
+++ b/html/index.html
@@ -676,21 +676,20 @@
 													<h3>JAVAScript App</h3>
 													<span>Weather App</span>
 												</div>
-												<a class="cavani_tm_full_link portfolio_popup" href="#"></a>
+												<a class="cavani_tm_full_link portfolio_popup" href="https://confident-benz-0b0b46.netlify.app/"></a>
 											</div>
 											
 											<div class="hidden_content">
 												<div class="popup_details">
 													<div class="main_details">
 														<div class="textbox">
-															<p>We live in a world where we need to move quickly and iterate on our ideas as flexibly as possible. Building mockups strikes the ideal balance ease of modification. Building mockups strikes the ideal balance ease of modification.</p>
-															<p>Mockups are useful both for the creative phase of the project - for instance when you're trying to figure out your user flows or the proper visual hierarchy - and the production phase when they phase when they will represent the target product. Building mockups strikes the ideal balance ease of modification.</p>
+															<p>Site is located here: https://confident-benz-0b0b46.netlify.app/ </p>
 														</div>
 														<div class="detailbox">
 															<ul>
 																<li>
 																	<span class="first">Client</span>
-																	<span>Alvaro Morata</span>
+																	<span>Lyle Practice..</span>
 																</li>
 																<li>
 																	<span class="first">Category</span>
