--- a/html/index.html
+++ b/html/index.html
@@ -160,10 +160,11 @@
 								</div>
 								<div class="wrapper">
 									<div class="left">
-										<p>Hello there! My name is <strong>Lyle Tilley</strong> I am a developer, and I'm very passionate and dedicated to my work.</p>
+										<p>Hello there! My name is <strong>Lyle Tilley</strong> I am a developer, and I'm very passionate and dedicated to my work in the tech world. I love to solve problems and debug complex issues,</p>
 									
-										<p>Gym guy. Identical twin. Wannabe Eliott Alderson from Mr Robot.<br><br>
+										<p>Little more about me -- Gym guy. Identical twin. Wannabe Eliott Alderson from Mr Robot.<br><br>
 											After working in advertising for years, I decided to make the jump to tech. With advertising, I loved working with clients content, and seeing results. I wanted to be more hands on, though - design and create. So I pursued web development. It's challenging, creative, and best of all - I am able to make a difference and SEE the difference on live websites - in turn seeing performance go up - this is what I strive for.</p>
+											
 									</div>
 									<div class="right">
 										<ul>
