--- a/html/index.html
+++ b/html/index.html
@@ -271,21 +271,10 @@
 													<li>
 														<div class="list_inner">
 															<div class="time">
-																<span>2010 - 2015</span>
-															</div>
-															<div class="place">
-																<h3>Mount Saint Vincent University</h3>
-																<span>BBA, minor in IT</span>
-															</div>
-														</div>
-													</li>
-													<li>
-														<div class="list_inner">
-															<div class="time">
 																<span>2020 - 2021</span>
 															</div>
 															<div class="place">
-																<h3>JUNO College</h3>
+																<h3>JUNO College - Coding Bootcamp</h3>
 																<span>Web Development Bootcamp</span>
 															</div>
 														</div>
@@ -298,6 +287,17 @@
 															<div class="place">
 																<h3>eCornell</h3>
 																<span>HTML/CSS/JAVAScript Certificate</span>
+															</div>
+														</div>
+													</li>
+													<li>
+														<div class="list_inner">
+															<div class="time">
+																<span>2010-2015</span>
+															</div>
+															<div class="place">
+																<h3>Mount Saint Vincent University</h3>
+																<span>BBA - Major finance, minor IT</span>
 															</div>
 														</div>
 													</li>
