--- a/html/index.html
+++ b/html/index.html
@@ -206,7 +206,7 @@
 												<li><i class="icon-right-dir"></i>Reading &amp; Writing</li>
 												<li><i class="icon-right-dir"></i>Cinema</li>
 												<li><i class="icon-right-dir"></i>Travelling</li>
-												
+												<li><i class="icon-right-dir"></i>Golf</li>
 											</ul>
 										</div>
 									</div>
