--- a/html/index.html
+++ b/html/index.html
@@ -92,11 +92,11 @@
 					</div>
 					<div class="menu_list">
 						<ul class="transition_link">
-							<li class="active"><a href="#home">Home</a></li>
-							<li><a href="#about">About</a></li>
-							<li><a href="#portfolio">Portfolio</a></li>
-							<li><a href="#news">News</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li class="active"><a href="#home"><strong>Home</strong></a></li>
+							<li><a href="#about"><strong>About</strong></a></li>
+							<li><a href="#portfolio"><strong>Portfolio</strong></a></li>
+							<li><a href="#news"><strong>News</strong></a></li>
+							<li><a href="#contact"><strong>Contact</strong></a></li>
 						</ul>
 					</div>
 					<div class="social">
@@ -131,6 +131,7 @@
 				<div class="cavani_tm_section animated" id="home">
 					<div class="cavani_tm_home">
 						<div class="content">
+							
 							<h3 class="name">LYLE TILLEY</h3>
 							<span class="line"></span>
 							<h3 class="job">
@@ -207,6 +208,7 @@
 												<li><i class="icon-right-dir"></i>Cinema</li>
 												<li><i class="icon-right-dir"></i>Travelling</li>
 												<li><i class="icon-right-dir"></i>Golf</li>
+												
 											</ul>
 										</div>
 									</div>
