--- a/html/index.html
+++ b/html/index.html
@@ -1034,12 +1034,9 @@
 												<textarea id="message" placeholder="Message"></textarea>
 											</div>
 											<div class="cavani_tm_button">
-												<a id="send_message"> <form action="https://formspree.io/f/mvolkwlg" method="POST" id="contact_form"></form>Send Message</a>
+												<a id="send_message" href="#">Send Message</a>
 											</div>
-											<form action="https://formspree.io/f/mvolkwlg" method="POST" id="contact_form">
-
-											<!-- If you want change mail address to yours, just open "modal" folder >> contact.php and go to line 4 and change detail to yours.  -->
-
+											
 										</form>
 									</div>
 								</div>
