--- a/html/index.html
+++ b/html/index.html
@@ -1027,7 +1027,7 @@
 								</p>
 								<p>
 									<div class="button101">
-								  <button type="submit">Send</button></div>
+								  <button type="submit" style="height: 30px; width: 100px; background-color: #333; color: white">Send</button></div>
 								</p>
 							  </form>
 							  
