--- a/html/index.html
+++ b/html/index.html
@@ -792,7 +792,7 @@
 					<div class="section_inner">
 						<div class="cavani_tm_news">
 							<div class="cavani_tm_title">
-								<span>More about Me and Latest News</span>
+								<span>Me 2.0 & Latest News</span>
 							</div>
 							<div class="news_list">
 								<!-- <ul>
