--- a/html/index.html
+++ b/html/index.html
@@ -321,7 +321,9 @@
 																<span>2018 - Present</span>
 															</div>
 															<div class="place">
-																<h3>See Portfolio</h3>
+																<h3>See Portfolio... Request Resume via 
+																	<a href="https://lyletilleycodes.com/#contact">Contact</a>
+																	</h3>
 																<span>Exclusive Author</span>
 															</div>
 														</div>
