--- a/html/index.html
+++ b/html/index.html
@@ -321,10 +321,14 @@
 																<span>2018 - Present</span>
 															</div>
 															<div class="place">
-																<h3>See Portfolio... Request Resume via 
-																	<a href="https://lyletilleycodes.com/#contact">Contact</a>
-																	</h3>
-																<span>Exclusive Author</span>
+																<h3>See Portfolio... 
+																	<br>
+																	<br>Request Resume via 
+																	
+																	<div class="cavani_tm_button transition_link">
+																		<a href="#contact">Get In Touch</a>
+																	</div>
+															
 															</div>
 														</div>
 													</li>
