--- a/html/index.html
+++ b/html/index.html
@@ -725,7 +725,7 @@
 												<div class="popup_details">
 													<div class="main_details">
 														<div class="textbox">
-															<p>Site is located here: https://confident-benz-0b0b46.netlify.app/ </p>
+															<p>Site is located here: 		<a href="https://confident-benz-0b0b46.netlify.app/ ">Weather API App</a></p>
 														</div>
 														<div class="detailbox">
 															<ul>
