--- a/html/index.html
+++ b/html/index.html
@@ -718,7 +718,7 @@
 													<h3>Weather App - Try it!</h3>
 													<span>JAVAScript</span>
 												</div>
-												<a class="cavani_tm_full_link portfolio_popup" href="https://confident-benz-0b0b46.netlify.app/"></a>
+												<a class="cavani_tm_full_link popup-youtube" href="https://confident-benz-0b0b46.netlify.app/"></a>
 											</div>
 											
 											<div class="hidden_content">
@@ -729,20 +729,17 @@
 														</div>
 														<div class="detailbox">
 															<ul>
-																<li>
+																<!-- <li>
 																	<span class="first">Client</span>
 																	<span>Lyle Practice..</span>
-																</li>
-																<li>
-																	<span class="first">Category</span>
-																	<span><a href="#">Detail</a></span>
-																</li>
-																<li>
+																</li> -->
+															
+																<!-- <li>
 																	<span class="first">Date</span>
 																	<span>March 07, 2021</span>
-																</li>
-																<li>
-																	<span class="first">Share</span>
+																</li> -->
+																<!-- <li> -->
+																	<!-- <span class="first">Share</span> -->
 																	<ul class="share">
 																		<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
 																		<li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
