--- a/html/index.html
+++ b/html/index.html
@@ -102,8 +102,8 @@
 					</div>
 					<div class="social">
 						<ul>
-							<li><a href="https://www.linkedin.com/in/lyle-tilley-5b68b5178/"><img class="svg" src="img/svg/social/linkedin.png"  alt="" target="_blank" /></a></li>
-					<li><a href="https://github.com/LyeTilley"><img class="svg" src="img/svg/social/github.png" target="_blank" alt="" /></a></li>
+							<li><a href="https://www.linkedin.com/in/lyle-tilley-5b68b5178/"><img class="svg" src="img/svg/social/linkedin.png"  alt="" target="_blank"/></a></li>
+					<li><a href="https://github.com/LyleTilley"><img class="svg" src="img/svg/social/github.png" target="_blank" alt="" /></a></li>
 							<!-- <li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
 							<li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt="" /></a></li>
 							<li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg" alt="" /></a></li> -->
@@ -1075,7 +1075,7 @@
 			<div class="social">
 				<ul>
 					<li><a href="https://www.linkedin.com/in/lyle-tilley-5b68b5178/"><img class="svg" src="img/svg/social/linkedin.png" alt="" /></a></li>
-					<li><a href="https://github.com/LyeTilley" ><img class="svg" src="img/svg/social/github.png" alt="" /></a></li>
+					<li><a href="https://github.com/LyleTilley" ><img class="svg" src="img/svg/social/github.png" alt="" /></a></li>
 					<!-- <li><a href="#"><i class="fa fa-brands fa-linkedin"></i></a></li> -->
 					<!-- <li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
 					<li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt="" /></a></li>
