--- a/html/index.html
+++ b/html/index.html
@@ -142,6 +142,9 @@
 									  <b class="is-visible">Developer</b>
 									
 									</span>
+									<br>
+									<br>
+									<h5>Making Websites Better</h5>
 								</span>
 							</h3>
 							<div class="cavani_tm_button transition_link">
