--- a/html/index.html
+++ b/html/index.html
@@ -198,6 +198,7 @@
 												<li><i class="icon-right-dir"></i>Web Hosting</li>
 												<li><i class="icon-right-dir"></i>DeBugging</li>
 												<li><i class="icon-right-dir"></i>React</li>
+												<li><i class="icon-right-dir"></i>ROKU/Brightscript - learning</li>
 											</ul>
 										</div>
 									</div>
@@ -243,6 +244,10 @@
 											</div>
 											<div class="progress_inner" data-value="90">
 												<span><span class="label">Shopify</span><span class="number">90%</span></span>
+												<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
+											</div>
+											<div class="progress_inner" data-value="20">
+												<span><span class="label">Roku/Brightscript</span><span class="number">20%</span></span>
 												<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 											</div>
 										</div>
