--- a/html/index.html
+++ b/html/index.html
@@ -699,6 +699,18 @@
 											</div>
 										</div>
 									</li>
+									<li class="detail">
+										<div class="list_inner">
+											<div class="image">
+												<img src="img/thumbs/1-1.jpg" alt="" />
+												<div class="main" data-img-url="img/portfolio/eurkaaaa.png"></div>
+												
+												<div class="details">
+													<h3>Mailchimp Landing Page</h3>
+													<span>HTML/CSS</span>
+												</div>
+												<a class="cavani_tm_full_link popup-youtube" href="https://eurekagifts.ca/"></a>
+											</div>
 
 									
 									<li class="shopify">
