--- a/html/index.html
+++ b/html/index.html
@@ -539,6 +539,19 @@
 											</div>
 										</div>
 									</li>
+
+									<li class="shopify">
+										<div class="list_inner">
+											<div class="image">
+												<img src="img/thumbs/shopify.png" alt="" />
+												<div class="main" data-img-url="img/portfolio/thegiffinder.png"></div>
+												
+												<div class="details">
+													<h3>REST API GIF Selector</h3>
+													<span>JAVAScript/HTML/CSS/ API</span>
+												</div>
+												<a class="cavani_tm_full_link popup-youtube" href="https://suspicious-shannon-071a9f.netlify.app/"></a>
+											</div>
 									<li class="shopify">
 										<div class="list_inner">
 											<div class="image">
