--- a/html/index.html
+++ b/html/index.html
@@ -547,7 +547,7 @@
 												<div class="main" data-img-url="img/portfolio/thegiffinder.png"></div>
 												
 												<div class="details">
-													<h3>REST API GIF Selector</h3>
+													<h3>REST API GIF Selector - Self Project</h3>
 													<span>JAVAScript/HTML/CSS/ API</span>
 												</div>
 												<a class="cavani_tm_full_link popup-youtube" href="https://suspicious-shannon-071a9f.netlify.app/"></a>
@@ -689,7 +689,7 @@
 												<div class="main" data-img-url="img/portfolio/thegiffinder.png"></div>
 												
 												<div class="details">
-													<h3>REST API GIF Selector</h3>
+													<h3>REST API GIF Selector Self Project</h3>
 													<span>JAVAScript/HTML/CSS/ API</span>
 												</div>
 												<a class="cavani_tm_full_link popup-youtube" href="https://suspicious-shannon-071a9f.netlify.app/"></a>
