--- a/html/index.html
+++ b/html/index.html
@@ -518,7 +518,7 @@
 												<div class="main" data-img-url="img/portfolio/petitewine.png"></div>
 												<!-- <span class="icon"><i class="icon-usd"></i></span> -->
 												<div class="details">
-													<h3>Petite Rivière Vineyards - Arbuckle Media© client (all Shopify/Wordpress - AM clients)</h3>
+													<h3>Petite Rivière Vineyards - Arbuckle Media© client (Team member)</h3>
 													<span>Shopify</span>
 												</div>
 												<a class="cavani_tm_full_link popup-youtube" href="https://petiterivierevineyards.ca/"></a>
@@ -559,7 +559,7 @@
 												<div class="main" data-img-url="img/portfolio/tipping11.png"></div>
 												<!-- <span class="icon"><i class="fa-brands fa-shopify"></i></span> -->
 												<div class="details">
-													<h3>Tipping Point Distillery</h3>
+													<h3>Tipping Point Distillery (Team member)</h3>
 													<span>Shopify</span>
 												</div>
 												<a class="cavani_tm_full_link popup-youtube" href="https://tippingpointdistillers.ca/"></a>
@@ -573,7 +573,7 @@
 												<div class="main" data-img-url="img/portfolio/2crowsboys.png"></div>
 												<!-- <span class="icon"><i class="fa-brands fa-shopify"></i></span> -->
 												<div class="details">
-													<h3>2Crows Brewing</h3>
+													<h3>2Crows Brewing (Team member)</h3>
 													<span>Wordpress</span>
 												</div>
 												<a class="cavani_tm_full_link popup-youtube" href="https://2crowsbrewing.com/"></a>
@@ -733,7 +733,7 @@
 												<div class="main" data-img-url="img/portfolio/street.png"></div>
 											
 												<div class="details">
-													<h3>Chill Street Brewing</h3>
+													<h3>Chill Street Brewing (Team member)</h3>
 													<span>Shopify</span>
 												</div>
 												<a class="cavani_tm_full_link popup-youtube" href="https://chillstreetcraftbeverageco.com/"></a>
