--- a/html/index.html
+++ b/html/index.html
@@ -753,6 +753,18 @@
 												</div>
 												<a class="cavani_tm_full_link popup-youtube" href="https://confident-benz-0b0b46.netlify.app/"></a>
 											</div>
+											<li class="detail">
+												<div class="list_inner">
+													<div class="image">
+														<img src="img/thumbs/1-1.jpg" alt="" />
+														<div class="main" data-img-url="img/portfolio/todoapp.png"></div>
+														
+														<div class="details">
+															<h3>Todo App (Office theme)</h3>
+															<span>React</span>
+														</div>
+														<a class="cavani_tm_full_link popup-youtube" href="https://6254d24508e2c3573c6fedd0--effervescent-kulfi-339d9a.netlify.app/"></a>
+													</div>
 											
 											<div class="hidden_content">
 												<div class="popup_details">
