--- a/html/index.html
+++ b/html/index.html
@@ -308,7 +308,7 @@
 															</div>
 															<div class="place">
 																<h3>Mount Saint Vincent University</h3>
-																<span>BBA - Major finance, minor IT</span>
+																<span>BBA - Major IT, minor martketing</span>
 															</div>
 														</div>
 													</li>
