--- a/html/index.html
+++ b/html/index.html
@@ -584,10 +584,10 @@
 										<div class="list_inner">
 											<div class="image">
 												<img src="img/thumbs/shopify.png" alt="" />
-												<div class="main" data-img-url="img/portfolio/breakingbad.png"></div>
+												<div class="main" data-img-url="img/portfolio/breaking2.png"></div>
 												<!-- <span class="icon"><i class="fa-brands fa-shopify"></i></span> -->
 												<div class="details">
-													<h3>Breaking Bad React App</h3>
+													<h3>Breaking Bad React App - API</h3>
 													<span>React</span>
 												</div>
 												<a class="cavani_tm_full_link popup-youtube" href="https://cocky-wilson-57f220.netlify.app/?fbclid=IwAR3oTWRtlhlouRHVbIJW5mcaOejO3ADyskJ25GH7OLVX-rJ2X1JoXY4itb8"></a>
