--- a/html/index.html
+++ b/html/index.html
@@ -757,13 +757,13 @@
 												<div class="list_inner">
 													<div class="image">
 														<img src="img/thumbs/1-1.jpg" alt="" />
-														<div class="main" data-img-url="img/portfolio/todoapp.png"></div>
+														<div class="main" data-img-url="img/portfolio/50cent.png"></div>
 														
 														<div class="details">
-															<h3>Todo App (Office theme)</h3>
+															<h3>React API Selector</h3>
 															<span>React</span>
 														</div>
-														<a class="cavani_tm_full_link popup-youtube" href="https://effervescent-kulfi-339d9a.netlify.app/"></a>
+														<a class="cavani_tm_full_link popup-youtube" href="https://artistdiscography.netlify.app/"></a>
 													</div>
 											
 											<div class="hidden_content">
